--- a/app/src/main/res/layout/activity_d_home_page.xml
+++ b/app/src/main/res/layout/activity_d_home_page.xml
@@ -28,4 +28,11 @@
         android:background="@drawable/border_set_patient_list"
         android:scrollbars="vertical" />
 
+    <TextView
+        android:id="@+id/testView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/recyclerView"
+        android:textSize="16sp"/>
+
 </RelativeLayout>
