--- a/app/src/main/res/layout/activity_patient_form.xml
+++ b/app/src/main/res/layout/activity_patient_form.xml
@@ -21,7 +21,8 @@
         android:layout_height="wrap_content"
         android:text="Please enter your details"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        android:gravity="center_horizontal" /> //had to add line
 
     <LinearLayout
         android:id="@+id/firstLayout"
@@ -354,12 +355,33 @@
                 android:inputType="textPersonName" />
 
             <Button
-                android:id="@+id/btnSubmit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Submit"
+                android:id="@+id/submit"
+                android:layout_width="100dp"
+                android:layout_height="38dp"
+
+                android:layout_alignParentStart="true"
+
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"/>
+                android:layout_marginStart="39dp"
+                android:layout_marginLeft="39dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="47dp"
+                android:layout_marginRight="47dp"
+                android:layout_marginBottom="39dp"
+                android:background="@color/gradStart"
+                android:text="Submit"
+                android:textColor="#FFFFFF"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.533"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.912" />
+
+
         </RelativeLayout>
 
     </LinearLayout>
