--- a/app/src/main/res/layout/activity_patient_form.xml
+++ b/app/src/main/res/layout/activity_patient_form.xml
@@ -312,7 +312,7 @@
         <RadioGroup
             android:id="@+id/radioGroup3"
             android:layout_width="match_parent"
-            android:layout_height="157dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginLeft="12dp"
             android:layout_marginRight="6dp">
