Nav bar for patient is working except for view details

--- a/app/src/main/res/layout/activity_d_patient_details.xml
+++ b/app/src/main/res/layout/activity_d_patient_details.xml
@@ -7,6 +7,7 @@
     tools:context=".DPatientDetails"
     android:orientation="vertical">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -380,5 +381,22 @@
             android:textSize="18sp"
             android:textColor="@android:color/black"/>
     </LinearLayout>
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_nav_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            app:itemBackground="@color/colorPrimary"
+            app:itemIconTint="@drawable/selector"
+            app:itemTextColor="@drawable/selector"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0"
+            app:menu="@menu/menu_navigation" />
+
     </LinearLayout>
 </ScrollView>
