--- a/app/src/main/res/layout/activity_doctor_form.xml
+++ b/app/src/main/res/layout/activity_doctor_form.xml
@@ -92,6 +92,7 @@
             app:layout_constraintTop_toBottomOf="@+id/view"
             tools:targetApi="lollipop" />
 
+        <!--
         <EditText
             android:id="@+id/email"
             android:layout_width="330dp"
@@ -112,7 +113,7 @@
             app:layout_constraintHorizontal_bias="0.49"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/first_name"
-            tools:targetApi="lollipop" />
+            tools:targetApi="lollipop" />-->
 
         <RadioGroup
             android:id="@+id/genderGroup"
@@ -127,7 +128,7 @@
 
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/email">
+            app:layout_constraintTop_toBottomOf="@+id/first_name">
 
             <RadioButton
                 android:id="@+id/radioMaleButton"
@@ -211,7 +212,7 @@
 
         <EditText
             android:id="@+id/LengthOfPractice"
-            android:layout_width="195dp"
+            android:layout_width="330dp"
             android:layout_height="47dp"
             android:layout_marginStart="15dp"
             android:layout_marginLeft="15dp"
@@ -231,27 +232,28 @@
             app:layout_constraintTop_toBottomOf="@id/date_of_birth"
             tools:targetApi="lollipop" />
 
-        <EditText
-            android:id="@+id/practicingNum"
-            android:layout_width="162dp"
-            android:layout_height="47dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="76dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginRight="15dp"
-            android:backgroundTint="@color/cardview_shadow_start_color"
-            android:digits="0123456789"
-            android:ems="10"
-            android:hint="Practicing Number"
-            android:importantForAutofill="no"
-            android:textColor="#000000"
-            android:textColorHint = "@color/cardview_shadow_start_color"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.945"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/date_of_birth"
-            tools:targetApi="lollipop" />
+        <!--
+                <EditText
+                    android:id="@+id/practicingNum"
+                    android:layout_width="162dp"
+                    android:layout_height="47dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="76dp"
+                    android:layout_marginEnd="15dp"
+                    android:layout_marginRight="15dp"
+                    android:backgroundTint="@color/cardview_shadow_start_color"
+                    android:digits="0123456789"
+                    android:ems="10"
+                    android:hint="Practicing Number"
+                    android:importantForAutofill="no"
+                    android:textColor="#000000"
+                    android:textColorHint = "@color/cardview_shadow_start_color"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.945"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/date_of_birth"
+                    tools:targetApi="lollipop" />-->
 
         <EditText
             android:id="@+id/Institution"
@@ -319,28 +321,6 @@
             app:layout_constraintTop_toBottomOf="@+id/date_of_birth"
             tools:targetApi="lollipop" />
 
-        <EditText
-            android:id="@+id/password"
-            android:layout_width="330dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="288dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginRight="15dp"
-            android:backgroundTint="@color/cardview_shadow_start_color"
-            android:ems="10"
-            android:hint="Enter password"
-            android:importantForAutofill="no"
-            android:inputType="textPassword"
-            android:textColor="#000000"
-            android:textColorHint = "@color/cardview_shadow_start_color"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/date_of_birth"
-            tools:targetApi="lollipop" />
-
 
         <CheckBox
             android:id="@+id/policy"
@@ -356,7 +336,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.137"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/password"
+            app:layout_constraintTop_toBottomOf="@+id/Cellnu"
             tools:targetApi="lollipop" />
 
         <Button
